rafael_rios/session-03/exercise-02/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-frontend-allow
  namespace: exercise-01
spec:
  podSelector:
    matchLabels:
      exercise: "01"
      rol: db-wp
  ingress:
    - from:
      - podSelector:
          matchLabels:
            exercise: "01"
            rol: web-wp
      ports:
        - protocol: TCP
          port: 3306
